<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.OtpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topappbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
                app:navigationIconTint="?attr/colorOnPrimary"
                app:title="OTP"
                android:layout_marginTop="10dp"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/enter_otp"
            android:fontFamily="@font/yellixsemibold"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/otp_desc"
            android:textAlignment="center"
            android:fontFamily="@font/yellixregular"
            android:textSize="14sp"
            android:textColor="@color/lightgrey"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <EditText
            android:id="@+id/editText1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText1"
            app:layout_constraintTop_toTopOf="@+id/editText1"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:background="@drawable/border"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="@+id/editText2"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:background="@drawable/border"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText3"
            app:layout_constraintTop_toTopOf="@+id/editText3"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:background="@drawable/border"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editText6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="@+id/editText4"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:maxLength="1"
            android:background="@drawable/border"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editText5"
            app:layout_constraintTop_toTopOf="@+id/editText5"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="36dp"
            android:text="@string/submit"
            android:padding="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textview"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
